redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/fields/Destination_Entity__c.field-meta.xml
<CustomField>
    <fullName>Destination_Entity__c</fullName>
    <label>Destination Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Event</fullName>
                <default>true</default>
                <label>Event</label>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>