redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <label>Destination Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>