redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/fields/Map_Name__c.field-meta.xml
<CustomField>
    <fullName>Map_Name__c</fullName>
    <label>Map Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Test_Map</fullName>
                <default>true</default>
                <label>Test_Map</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>