redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/fields/Nullable__c.field-meta.xml
<CustomField>
    <fullName>Nullable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if null values should overwrite non-null values.</description>
    <label>Nullable</label>
    <type>Checkbox</type>
</CustomField>