redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/fields/Overwritable__c.field-meta.xml
<CustomField>
    <fullName>Overwritable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if null values should overwrite non-null values.</description>
    <label>Overwritable</label>
    <type>Checkbox</type>
</CustomField>