redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if field is Required</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>