redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/fields/Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>Source_Entity__c</fullName>
    <label>Source Entity</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>User_Field_Map_Entries</relationshipLabel>
    <relationshipName>User_Field_Map_Entries</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>