redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <metadataRelationshipControllingField>User_Field_Map_Entry__mdt.Source_Entity__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>User_Field_Map_Entries</relationshipLabel>
    <relationshipName>User_Field_Map_Entries</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>