redhatframework-app/main/default/objects/User_Field_Map_Entry__mdt/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>Map_Name__c</columns>
    <columns>Sequence_Number__c</columns>
    <columns>MasterLabel</columns>
    <columns>Destination_Entity__c</columns>
    <columns>Destination_Field__c</columns>
    <columns>Source_Entity__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Overwritable__c</columns>
    <columns>Nullable__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
    <language>en_US</language>
</ListView>